Pre battle view controller implementation started

--- a/MiniChallenge8/Storyboards/Base.lproj/Main.storyboard
+++ b/MiniChallenge8/Storyboards/Base.lproj/Main.storyboard
@@ -33,7 +33,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iCY-Gp-3P7">
-                                <rect key="frame" x="1406" y="895" width="322" height="76"/>
+                                <rect key="frame" x="1406" y="894" width="322" height="76"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="iCY-Gp-3P7" secondAttribute="height" multiplier="195:46" id="WR4-cI-LGC"/>
@@ -43,9 +43,13 @@
                                 <state key="normal" title="Start" backgroundImage="Button">
                                     <color key="titleColor" red="0.14117647058823529" green="0.14117647058823529" blue="0.14117647058823529" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <state key="disabled" title="Esperando" backgroundImage="InactiveButton"/>
+                                <connections>
+                                    <action selector="didPressStart:" destination="S8v-qt-fMu" eventType="primaryActionTriggered" id="diD-Q1-0pA"/>
+                                </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="bottom" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Use o app no iPhone para entrar !" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="qfR-pN-1FO">
-                                <rect key="frame" x="192" y="895" width="574" height="76"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="bottom" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="use o app no iphone para entrar - mínimo são 3 jogadores" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="qfR-pN-1FO">
+                                <rect key="frame" x="192" y="894" width="959" height="76"/>
                                 <fontDescription key="fontDescription" name="PricedownBl-Regular" family="Pricedown" pointSize="38"/>
                                 <color key="textColor" red="1" green="0.83921568629999999" blue="0.39652104329999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -91,16 +95,18 @@
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="bA1-jR-WIH" id="UZt-mq-Vnf"/>
+                        <outlet property="instructionsLabel" destination="qfR-pN-1FO" id="SP3-rG-iVw"/>
+                        <outlet property="startButton" destination="iCY-Gp-3P7" id="P36-a8-bmS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IET-HF-x7G" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="76" y="1207"/>
         </scene>
-        <!--Pre Battle View Controller-->
+        <!--Pre Battle View ControllerTVOS-->
         <scene sceneID="ohO-w5-pa7">
             <objects>
-                <viewController id="WLS-SI-AZt" customClass="PreBattleViewController" customModule="MiniChallenge8" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="preBattleViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="WLS-SI-AZt" customClass="PreBattleViewControllerTVOS" customModule="MiniChallenge8" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="I5l-fi-hKP"/>
                         <viewControllerLayoutGuide type="bottom" id="nFr-pH-AWN"/>
@@ -112,19 +118,21 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Pre Battle" translatesAutoresizingMaskIntoConstraints="NO" id="HvC-rr-NS7">
                                 <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wB7-qU-sw2">
-                                <rect key="frame" x="1450" y="908" width="322" height="76"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FjK-q5-7HP">
+                                <rect key="frame" x="787" y="958" width="346" height="82"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="wB7-qU-sw2" secondAttribute="height" multiplier="195:46" id="qw6-DO-Qjf"/>
+                                    <constraint firstAttribute="width" secondItem="FjK-q5-7HP" secondAttribute="height" multiplier="195:46" id="r9z-NS-ofD"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="PricedownBl-Regular" family="Pricedown" pointSize="40"/>
                                 <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
-                                <state key="normal" title="Batalhar" backgroundImage="Button">
+                                <state key="normal" title="batalhar" backgroundImage="Button">
                                     <color key="titleColor" red="0.14117647059999999" green="0.14117647059999999" blue="0.14117647059999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <state key="disabled" title="Esperando" backgroundImage="InactiveButton"/>
                                 <connections>
-                                    <action selector="didPressBattleBuuton:" destination="WLS-SI-AZt" eventType="primaryActionTriggered" id="skZ-9K-Wcq"/>
+                                    <action selector="didPressBattleButton:" destination="WLS-SI-AZt" eventType="primaryActionTriggered" id="d6m-NN-e8A"/>
+                                    <action selector="didPressStart:" destination="S8v-qt-fMu" eventType="primaryActionTriggered" id="BL5-vz-TEH"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rapper5" translatesAutoresizingMaskIntoConstraints="NO" id="SCx-63-0cH">
@@ -148,20 +156,29 @@
                                 <color key="textColor" red="0.99607843139999996" green="0.83529411760000005" blue="0.36470588240000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="mc t-vos foi sorteado deslize para baixo para você começar ou para cima para seu oponente" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.25" translatesAutoresizingMaskIntoConstraints="NO" id="s0o-Uz-fT4">
+                                <rect key="frame" x="384" y="729" width="1152" height="162"/>
+                                <fontDescription key="fontDescription" name="PricedownBl-Regular" family="Pricedown" pointSize="40"/>
+                                <color key="textColor" red="0.99607843139999996" green="0.83529411760000005" blue="0.36470588240000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="FjK-q5-7HP" firstAttribute="width" secondItem="t0w-bx-psI" secondAttribute="width" multiplier="0.18" id="0DV-WG-WwP"/>
                             <constraint firstItem="8rx-34-Hna" firstAttribute="width" secondItem="t0w-bx-psI" secondAttribute="width" multiplier="0.2" id="2dA-cd-mzS"/>
                             <constraint firstItem="9U6-4i-fhx" firstAttribute="height" secondItem="SCx-63-0cH" secondAttribute="height" id="4zD-Bg-lsm"/>
                             <constraint firstItem="nFr-pH-AWN" firstAttribute="top" secondItem="SCx-63-0cH" secondAttribute="bottom" constant="451" id="8SV-me-934"/>
                             <constraint firstItem="SCx-63-0cH" firstAttribute="leading" secondItem="JHi-Ug-gCi" secondAttribute="leading" constant="160" id="AGh-7L-4tq"/>
-                            <constraint firstItem="JHi-Ug-gCi" firstAttribute="trailing" secondItem="wB7-qU-sw2" secondAttribute="trailing" constant="58" id="CJa-yz-nLl"/>
-                            <constraint firstItem="wB7-qU-sw2" firstAttribute="top" secondItem="HvC-rr-NS7" secondAttribute="bottom" constant="-172" id="Dpx-PW-jmX"/>
+                            <constraint firstItem="s0o-Uz-fT4" firstAttribute="height" secondItem="t0w-bx-psI" secondAttribute="height" multiplier="0.15" id="CNV-rl-rVR"/>
                             <constraint firstItem="eny-Xe-yse" firstAttribute="centerX" secondItem="9U6-4i-fhx" secondAttribute="centerX" id="KSY-Vh-IAA"/>
                             <constraint firstItem="8rx-34-Hna" firstAttribute="centerX" secondItem="SCx-63-0cH" secondAttribute="centerX" id="MaC-bN-0oL"/>
                             <constraint firstItem="HvC-rr-NS7" firstAttribute="top" secondItem="t0w-bx-psI" secondAttribute="top" id="Mrc-bl-rxE"/>
-                            <constraint firstItem="wB7-qU-sw2" firstAttribute="height" secondItem="HvC-rr-NS7" secondAttribute="height" multiplier="0.07" id="SaV-68-INa"/>
+                            <constraint firstItem="FjK-q5-7HP" firstAttribute="centerX" secondItem="JHi-Ug-gCi" secondAttribute="centerX" id="RAX-Ad-bit"/>
+                            <constraint firstItem="s0o-Uz-fT4" firstAttribute="centerY" secondItem="JHi-Ug-gCi" secondAttribute="centerY" multiplier="1.5" id="SUp-QB-ydV"/>
                             <constraint firstAttribute="trailing" secondItem="HvC-rr-NS7" secondAttribute="trailing" id="UcS-Fe-Dco"/>
                             <constraint firstItem="eny-Xe-yse" firstAttribute="top" secondItem="9U6-4i-fhx" secondAttribute="bottom" constant="30" id="VPN-7M-ZMs"/>
+                            <constraint firstItem="s0o-Uz-fT4" firstAttribute="width" secondItem="t0w-bx-psI" secondAttribute="width" multiplier="0.6" id="WKm-je-vhi"/>
+                            <constraint firstItem="FjK-q5-7HP" firstAttribute="centerY" secondItem="JHi-Ug-gCi" secondAttribute="centerY" multiplier="1.85" id="Xne-iW-CZh"/>
                             <constraint firstAttribute="bottom" secondItem="HvC-rr-NS7" secondAttribute="bottom" id="eiY-Jm-o40"/>
                             <constraint firstItem="8rx-34-Hna" firstAttribute="top" secondItem="SCx-63-0cH" secondAttribute="bottom" constant="41" id="fJu-7Y-kOZ"/>
                             <constraint firstItem="SCx-63-0cH" firstAttribute="top" secondItem="I5l-fi-hKP" secondAttribute="bottom" constant="213" id="gvk-Td-Lbc"/>
@@ -169,17 +186,18 @@
                             <constraint firstItem="eny-Xe-yse" firstAttribute="width" secondItem="t0w-bx-psI" secondAttribute="width" multiplier="0.2" id="mdt-nP-TiV"/>
                             <constraint firstItem="9U6-4i-fhx" firstAttribute="width" secondItem="SCx-63-0cH" secondAttribute="width" id="sgu-YK-2kS"/>
                             <constraint firstItem="HvC-rr-NS7" firstAttribute="leading" secondItem="t0w-bx-psI" secondAttribute="leading" id="tYT-HA-XFd"/>
+                            <constraint firstItem="s0o-Uz-fT4" firstAttribute="centerX" secondItem="JHi-Ug-gCi" secondAttribute="centerX" id="wbP-eC-jf8"/>
                             <constraint firstItem="9U6-4i-fhx" firstAttribute="top" secondItem="I5l-fi-hKP" secondAttribute="bottom" constant="224" id="xqJ-Qw-ijI"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="JHi-Ug-gCi"/>
                     </view>
                     <connections>
+                        <outlet property="battleButton" destination="FjK-q5-7HP" id="szr-dM-xSK"/>
+                        <outlet property="choosenLabel" destination="s0o-Uz-fT4" id="bVV-zU-3g4"/>
                         <outlet property="player1ImageView" destination="SCx-63-0cH" id="W6E-G9-yqA"/>
-                        <outlet property="player1ImgView" destination="SCx-63-0cH" id="wcw-hs-BES"/>
-                        <outlet property="player1Label" destination="8rx-34-Hna" id="TWK-9V-9Vo"/>
+                        <outlet property="player1Name" destination="8rx-34-Hna" id="vn6-z2-lGU"/>
                         <outlet property="player2ImageView" destination="9U6-4i-fhx" id="8O1-TJ-Nt8"/>
-                        <outlet property="player2ImgView" destination="9U6-4i-fhx" id="UOz-yF-Cuv"/>
-                        <outlet property="player2Label" destination="eny-Xe-yse" id="cFs-XX-hQx"/>
+                        <outlet property="player2Name" destination="eny-Xe-yse" id="Dbr-F1-Eq1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zes-3S-0Iz" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -226,6 +244,7 @@
     <resources>
         <image name="Battle" width="1920" height="1080"/>
         <image name="Button" width="390" height="92"/>
+        <image name="InactiveButton" width="390" height="92"/>
         <image name="Pre Battle" width="1920" height="1080"/>
         <image name="homeScreen" width="1920" height="1080"/>
         <image name="rapper4" width="227" height="227"/>
